--- a/client/main.scss
+++ b/client/main.scss
@@ -1,4 +1,7 @@
 /* CSS declarations go here */
 
 // App
-@import "imports/app/app";"
+@import "imports/app/app";
+
+// Theme
+@import "imports/theme/variables";
