--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,6 +1,14 @@
 page-map {
 	#map {
 		width: 100%;
-		height: 100%;
+		height: 75%;
+	}
+
+	#check-in-button {
+		height: 25%;
+		width: 100%;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
 	}
 }
