Updated Maps plugin to V2.0 for multiple maps.

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -4,6 +4,11 @@ page-map {
 		height: 75%;
 	}
 
+	ion-app._gmaps_cdv_ .nav-decor {
+		background-color: transparent !important;
+		display: none !important;
+	}
+
 	#check-in-button {
 		height: 25%;
 		width: 100%;
